[gd_scene load_steps=19 format=3 uid="uid://cbrrf7lphju8l"]

[ext_resource type="Script" path="res://Scenes/screens/camp_fire_scene.gd" id="1_10jof"]
[ext_resource type="Texture2D" uid="uid://6nhx6bjh1dd7" path="res://Sprites/ui/screens/moon.png" id="2_f5ber"]
[ext_resource type="Texture2D" uid="uid://b7gc3g7ku7uu4" path="res://Sprites/ui/screens/forest_fight.png" id="3_y7778"]
[ext_resource type="Texture2D" uid="uid://bw1t4ir0o5jca" path="res://Sprites/ui/rewardIcons/campfire/campfire1.png" id="4_l6b3n"]
[ext_resource type="Texture2D" uid="uid://cgn80ik7rpyre" path="res://Sprites/ui/rewardIcons/campfire/campfire2.png" id="5_xtnr3"]
[ext_resource type="Texture2D" uid="uid://bts5kgdvt0ndx" path="res://Sprites/ui/rewardIcons/campfire/campfire3.png" id="6_qsxji"]
[ext_resource type="Texture2D" uid="uid://cslo1yt0au1rh" path="res://Sprites/ui/rewardIcons/campfire/campfire4.png" id="7_5mvww"]
[ext_resource type="Texture2D" uid="uid://cdu7taajdf4yq" path="res://Sprites/ui/rewardIcons/campfire/campfire5.png" id="8_woa4c"]
[ext_resource type="Texture2D" uid="uid://cnmsx2viyictf" path="res://Sprites/ui/rewardIcons/campfire/campfire6.png" id="9_c33o5"]
[ext_resource type="Texture2D" uid="uid://c8n5ra3wa0twl" path="res://Sprites/ui/light_map.webp" id="10_86mr4"]
[ext_resource type="Script" path="res://Scenes/LightShadow.gd" id="11_lj3pb"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="12_6co3d"]
[ext_resource type="StyleBox" uid="uid://oohuxemtj3rw" path="res://Misc/ButtonHoverStyle.tres" id="13_mpis8"]
[ext_resource type="StyleBox" uid="uid://vrw3phfka8cx" path="res://Misc/TooltipStyle.tres" id="14_3oa14"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_su6qw"]
noise_type = 4
seed = 2
frequency = 0.2932

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qivbr"]
noise = SubResource("FastNoiseLite_su6qw")

[sub_resource type="SpriteFrames" id="SpriteFrames_ky6jp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_l6b3n")
}, {
"duration": 1.0,
"texture": ExtResource("5_xtnr3")
}, {
"duration": 1.0,
"texture": ExtResource("6_qsxji")
}, {
"duration": 1.0,
"texture": ExtResource("7_5mvww")
}, {
"duration": 1.0,
"texture": ExtResource("8_woa4c")
}, {
"duration": 1.0,
"texture": ExtResource("9_c33o5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_4m3ya"]
font = ExtResource("12_6co3d")
font_size = 48
font_color = Color(0.792157, 0.34902, 0.329412, 1)
outline_size = 11
outline_color = Color(0, 0, 0, 1)

[node name="CampfireScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10jof")
noise = SubResource("NoiseTexture2D_qivbr")
flicker_intensity = 0.245
flicker_speed = 0.535
base_energy = 0.215
base_scale = 3.845

[node name="Moon" type="Sprite2D" parent="."]
position = Vector2(1651.94, 114.583)
scale = Vector2(2.291, 2.291)
texture = ExtResource("2_f5ber")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.509804, 0.509804, 0.607843, 1)
position = Vector2(944.937, 596.291)
scale = Vector2(2.29097, 2.29097)
texture = ExtResource("3_y7778")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(963.937, 728.583)
color = Color(0.3649, 0.3649, 0.41, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(957, 721)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ky6jp")
frame_progress = 0.984924
speed_scale = 2.0

[node name="fireLight" type="PointLight2D" parent="."]
light_mask = 7
visibility_layer = 7
position = Vector2(957, 910)
scale = Vector2(5.94433, 5.94433)
color = Color(0.717647, 0.411765, 0.380392, 1)
energy = 1.09
range_z_max = 7
range_item_cull_mask = 7
texture = ExtResource("10_86mr4")
texture_scale = 16.67
height = 30.0
script = ExtResource("11_lj3pb")

[node name="light" type="Node2D" parent="."]
position = Vector2(1665.94, 158.583)
scale = Vector2(5.94433, 5.94433)

[node name="SpriteLight" type="PointLight2D" parent="light"]
position = Vector2(-0.168238, 0.841135)
color = Color(0.67451, 0.67451, 0.756863, 1)
energy = 0.3
range_z_max = 7
range_item_cull_mask = 6
texture = ExtResource("10_86mr4")
texture_scale = 2.94
height = 30.0
script = ExtResource("11_lj3pb")

[node name="UILight" type="PointLight2D" parent="light"]
position = Vector2(-1.02678e-05, -2.05356e-05)
energy = 0.15
range_z_max = 1000
range_item_cull_mask = 4
texture = ExtResource("10_86mr4")
texture_scale = 1.37
script = ExtResource("11_lj3pb")

[node name="ShadowLight" type="PointLight2D" parent="light"]
position = Vector2(-119.6, 128.764)
color = Color(0.67451, 0.67451, 0.756863, 1)
energy = 0.97
range_z_max = 7
shadow_enabled = true
texture = ExtResource("10_86mr4")
texture_scale = 4.06
height = 49.0
script = ExtResource("11_lj3pb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -171.0
offset_right = 68.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 400

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("12_6co3d")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = ExtResource("13_mpis8")
theme_override_styles/hover = ExtResource("13_mpis8")
theme_override_styles/pressed = ExtResource("13_mpis8")
theme_override_styles/normal = ExtResource("14_3oa14")
text = "Rest"

[node name="Button3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("12_6co3d")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = ExtResource("13_mpis8")
theme_override_styles/hover = ExtResource("13_mpis8")
theme_override_styles/pressed = ExtResource("13_mpis8")
theme_override_styles/normal = ExtResource("14_3oa14")
text = "Train"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 234.0
offset_right = 1129.0
offset_bottom = 298.0
text = "Restore Half of yor health"
label_settings = SubResource("LabelSettings_4m3ya")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 1136.0
offset_top = 232.0
offset_right = 2072.0
offset_bottom = 296.0
text = "Gain permanent empowered"
label_settings = SubResource("LabelSettings_4m3ya")

[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
